[tool.poetry]
name = "llama-run-planner"
version = "0.1.0"
description = ""
authors = ["dessertivore"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.2.1"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
bs4 = "^0.0.2"
langchain-chroma = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
